--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="cell" data-index="8"></div>
     </div>
     <button id="reset">Restart Game</button>
+    <p>Designed by Davy</p>
 
     <!-- Modal for Winner Announcement -->
 <div id="winnerModal" class="modal">
@@ -29,6 +30,7 @@
         <p id="winnerMessage"></p>
     </div>
 </div>
+
     <script src="script.js"></script>
 </body>
 </html>
