fix bug - make restart game button responds

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Tic Tac Toe - Moon & Star</h1>
     <h2 id="status">Player <span id="currentPlayer">🌙</span>'s turn</h2>
+    <form>
     <div class="board">
         <div class="cell" data-index="0"></div>
         <div class="cell" data-index="1"></div>
@@ -21,6 +22,7 @@
         <div class="cell" data-index="8"></div>
     </div>
     <button id="reset">Restart Game</button>
+    </form>
     <p>Designed by Davy</p>
 
     <!-- Modal for Winner Announcement -->
