--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Tic Tac Toe - Moon & Star</h1>
-    <h2 id="status">Player <span id="currentPlayer">🌙</span>'s turn</h2>
+    <h1>Tic Tac Toe <br> Moon & Star</h1>
+    <h2 id="status">Player 🌙 goes first, then ⭐</h2>
     <form>
     <div class="board">
         <div class="cell" data-index="0"></div>
